# HobbyRenderer

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  DXRPathTracer  PIPELINE.md  README.md  RTXPT  imgui.ini
ShaderIDsGenerator/: CMakeLists.txt
ShaderIDsGenerator/src/: main.cpp
docs/: CSM_Analysis.md  Clustered_Lighting_Analysis.md  DDGI_Analysis.md  Direct_Storage_Analysis.md  FeedbackManager_Stutter_Analysis.md  HDR_SwapChain_Analysis.md  HDR_SwapChain_Implementation_Plan.md  NormalBasic_RenderingMode_Analysis.md  OIT_Anlaysis.md  OMM_Integration_Analysis.md  PCSS_Analysis.md  PCSS_Analysis_NEW.md  REBLUR_Migration_Plan.md  RTXDI_FastPreset_Migration_Plan.md  RTXTS_TTM_Implementation_Plan.md  RTXTS_TTM_Integration_Analysis.md  SHARC_ReSTIRGI_Simplification_Analysis.md  SHARC_ReSTIR_GI_Integration_Plan.md  SHARC_Specular_Indirect_Plan.md  SSGI_Analysis.md  SSR_Analysis.md  SS_Shadows_Analysis.md  SceneCache_Reimplementation_Analysis.md  implementation_plan_restir_sharc_transparent.md  raymarch.hlsl
src/: AsyncMeshQueue.cpp  AsyncMeshQueue.h  AsyncQueueBase.cpp  AsyncQueueBase.h  AsyncTextureQueue.cpp  AsyncTextureQueue.h  BasePassCommon.cpp  BasePassCommon.h  BasePassRenderer.cpp  BloomRenderer.cpp  CSMDebugRenderer.cpp  Camera.cpp  Camera.h  CameraStateManager.cpp  CameraStateManager.h  CommonRenderers.cpp  CommonResources.cpp  CommonResources.h  Config.cpp  Config.h  D3D12RHI.cpp  DeferredRenderer.cpp  DenoiserHelper.cpp  DenoiserHelper.h  GraphicRHI.cpp  GraphicRHI.h  HDRRenderer.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiRenderer.cpp  NrdIntegration.cpp  NrdIntegration.h  PathTracerRenderer.cpp  PendingInstanceUpdate.h  ProceduralDefaultCube.cpp  ProceduralDefaultCube.h  RTXDIRenderer.cpp  RenderGraph.cpp  RenderGraph.h  RenderGraphUI.cpp  (+24 more)
src/Streaming/: AsyncTileIO.cpp  AsyncTileIO.h  FeedbackManager.cpp  FeedbackManager.h  FeedbackTexture.cpp  FeedbackTexture.h  FeedbackTextureSet.cpp  FeedbackTextureSet.h  StreamingContext.cpp  StreamingContext.h  TileResidencyDebugRenderer.cpp
src/Tests/: GraphicsTestUtils.h  TestFixtures.cpp  TestFixtures.h  TestMain.cpp  Tests_AsyncStreaming.cpp  Tests_Camera.cpp  Tests_CoreBoot.cpp  Tests_GPUReadback.cpp  Tests_Graphics.cpp  Tests_Lighting.cpp  Tests_MultiFrame.cpp  Tests_PathTracerImGuiNRD.cpp  Tests_RenderGraphAdvanced.cpp  Tests_RenderGraphAllocator.cpp  Tests_Rendering.cpp  Tests_Scene.cpp  Tests_SceneAdvanced.cpp  Tests_SceneAnimation.cpp  Tests_SceneMutationsAnimations.cpp  Tests_SharcRenderer.cpp  Tests_TAAHDRBloom.cpp  Tests_Textures.cpp
src/shaders/: Atmosphere.hlsli  BasePass.hlsl  BasePass.sr  Bindless.hlsli  Bloom.hlsl  CSMDebug.hlsl  CSMDebug.sr  Common.hlsli  Common.sr  CommonLighting.hlsli  CommonShadow.hlsli  Culling.h  Culling.hlsli  DIReservoirViz.hlsl  DIReservoirVizParameters.h  DeferredLighting.hlsl  DeferredLighting.sr  DepthCopy.hlsl  DownsampleDepth.hlsl  ExposureAdaptation.hlsl  ForwardLighting.hlsl  FullScreen.hlsl  GPUCulling.hlsl  GPUCulling.sr  GPULight.sr  HDR.sr  HZBDownsampleSPD.hlsl  HZBFromDepth.hlsl  ImGui.sr  Instance.sr  LuminanceHistogram.hlsl  MeshCommon.hlsli  PackNormalRoughness.hlsl  Packing.hlsli  PathTracer.hlsl  PathTracer.sr  RNG.hlsli  RTXDI.sr  RTXDIApplicationBridge.hlsli  RTXDIGenerateInitialSamples.hlsl  (+35 more)
src/shaders/rtxdi/: CompositingPass.hlsl  GenerateViewZ.hlsl  LightShaping.hlsli  PolymorphicLight.hlsli  PostprocessGBuffer.hlsl  PrepareLights.hlsl  Shaders.cfg
src/shaders/rtxdi/LightingPasses/: BrdfRayTracing.hlsl  ShadeSecondarySurfaces.hlsl  ShadingHelpers.hlsli  SharcIndirectQuery.hlsl
src/shaders/rtxdi/LightingPasses/DI/: FusedResampling.hlsl  GenerateInitialSamples.hlsl  ShadeSamples.hlsl  SpatialResampling.hlsl  TemporalResampling.hlsl
src/shaders/rtxdi/LightingPasses/GI/: FinalShading.hlsl  FusedResampling.hlsl  SpatialResampling.hlsl  TemporalResampling.hlsl
src/shaders/rtxdi/LightingPasses/PT/: ComputeDuplicationMap.hlsl  FillSampleID.hlsl  FinalShading.hlsl  GenerateInitialSamples.hlsl  PSRUtils.hlsli  SpatialResampling.hlsl  TemporalResampling.hlsl
src/shaders/rtxdi/LightingPasses/Presampling/: BuildEnvLightPDF.hlsl
src/shaders/rtxdi/LightingPasses/RtxdiApplicationBridge/: RAB_Buffers.hlsli  RAB_LightInfo.hlsli  RAB_LightSampling.hlsli  RAB_Material.hlsli  RAB_RTShaders.hlsli  RAB_RayPayload.hlsli  RAB_SpatialHelpers.hlsli  RAB_Surface.hlsli  RAB_VisibilityTest.hlsli  RtxdiApplicationBridge.hlsli
src/shaders/rtxdi/LightingPasses/RtxdiApplicationBridge/PathTracer/: RAB_PathTracer.hlsli
src/shaders/rtxdi/ShaderDebug/: VisualizeHdrSignals.hlsl
src/shaders/rtxdi/ShaderDebug/PTPathViz/: PTPathVizLines_vs.hlsl
src/shaders/rtxdi/ShaderDebug/PackedDataVizPasses/: NDirOctUNorm32Viz.hlsl  PackedR11G11B10UFloatViz.hlsl  PackedR8G8B8A8GammaUFloatViz.hlsl
src/shaders/rtxdi/ShaderDebug/ReservoirSubfieldVizPasses/: DIReservoirViz.hlsl  GIReservoirViz.hlsl  PTReservoirViz.hlsl
src/shaders/rtxdi/SharedShaderInclude/SharedShaderInclude/: ShaderParameters.h
src/shaders/rtxdi/SharedShaderInclude/SharedShaderInclude/ShaderDebug/: ReSTIRShaderDebugParameters.h
src/shaders/rtxdi/SharedShaderInclude/SharedShaderInclude/ShaderDebug/PTPathViz/: PTPathVizConstants.h
src/shaders/rtxdi/SharedShaderInclude/SharedShaderInclude/ShaderDebug/ReservoirSubfieldVizPasses/: DIReservoirVizParameters.h  GIReservoirVizParameters.h  PTReservoirVizParameters.h
